# QoreWallet

./: .clangd  CMakeLists.txt
src/: .gitignore  bitcoingui.cpp  bitcoingui.h  config.cpp  config.h  controller.cpp  controller.h  initexecutor.cpp  initexecutor.h  main.cpp  result.h  wallet.cpp  wallet.h
